[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/menu/Multiplayer/Server.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/menu/Multiplayer/Multiplayer.gd" type="Script" id=2]

[node name="Multiplayer" type="Popup"]
visible = true
margin_right = 782.0
margin_bottom = 443.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="TabContainer" type="TabContainer" parent="."]
margin_right = 812.0
margin_bottom = 397.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Favorites" type="Control" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="TabContainer/Favorites"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.10352e-05
margin_bottom = 3.05176e-05
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 32
custom_constants/margin_top = 64
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Favorites/MarginContainer2"]
margin_left = 32.0
margin_top = 64.0
margin_right = 772.0
margin_bottom = 329.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Top bar" type="HBoxContainer" parent="TabContainer/Favorites/MarginContainer2/VBoxContainer"]
margin_right = 740.0
margin_bottom = 20.0
size_flags_horizontal = 3
alignment = 2

[node name="Add server" type="Button" parent="TabContainer/Favorites/MarginContainer2/VBoxContainer/Top bar"]
margin_left = 595.0
margin_right = 676.0
margin_bottom = 20.0
text = "Add Server"

[node name="Refresh" type="Button" parent="TabContainer/Favorites/MarginContainer2/VBoxContainer/Top bar"]
margin_left = 680.0
margin_right = 740.0
margin_bottom = 20.0
text = "Refresh"

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Favorites/MarginContainer2/VBoxContainer"]
margin_top = 24.0
margin_right = 740.0
margin_bottom = 241.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_vertical_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Favorites/MarginContainer2/VBoxContainer/ScrollContainer"]
margin_right = 740.0
margin_bottom = 217.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Server" parent="TabContainer/Favorites/MarginContainer2/VBoxContainer/ScrollContainer/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 740.0

[node name="Bottom bar" type="HBoxContainer" parent="TabContainer/Favorites/MarginContainer2/VBoxContainer"]
margin_top = 245.0
margin_right = 740.0
margin_bottom = 265.0
size_flags_horizontal = 3

[node name="Connect" type="Button" parent="TabContainer/Favorites/MarginContainer2/VBoxContainer/Bottom bar"]
margin_right = 64.0
margin_bottom = 20.0
text = "Connect"

[node name="Cancel" type="Button" parent="TabContainer/Favorites/MarginContainer2/VBoxContainer/Bottom bar"]
margin_left = 68.0
margin_right = 122.0
margin_bottom = 20.0
text = "Cancel"

[node name="Local" type="Control" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Browser" type="Control" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
[connection signal="pressed" from="TabContainer/Favorites/MarginContainer2/VBoxContainer/Top bar/Add server" to="." method="_on_Add_server_pressed"]
[connection signal="pressed" from="TabContainer/Favorites/MarginContainer2/VBoxContainer/Top bar/Refresh" to="." method="_on_Refresh_pressed"]
[connection signal="pressed" from="TabContainer/Favorites/MarginContainer2/VBoxContainer/Bottom bar/Connect" to="." method="_on_Connect_pressed"]
[connection signal="pressed" from="TabContainer/Favorites/MarginContainer2/VBoxContainer/Bottom bar/Cancel" to="." method="_on_Cancel_pressed"]
